--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
 
 Spotify Data Science/Playlist Song Recomendation/spotify_million_playlist_dataset/
 Spotify Data Science/Playlist Song Recomendation/Test Playlist/
+
+Spotify Data Science/Playlist Song Recomendation/.idea
